Fix column gap issue

--- a/frontend/src/pages/AuthenticationPage/AuthenticationPage.scss
+++ b/frontend/src/pages/AuthenticationPage/AuthenticationPage.scss
@@ -28,5 +28,7 @@
 .forms-container {
   display: flex;
   flex-direction: row;
-  column-gap: 50px;
+  & > :not(:first-child) {
+    margin-left: 40px;
+  }
 }
